<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!-- ================= TOP BAR ================= -->

    <!-- ================= JUDUL ================= -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarAdd"
        android:layout_width="0dp"
        android:layout_height="126dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/desc_back"
            android:focusable="true"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_note_title"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnAdd"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/desc_add"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMore"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btnMore"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/desc_more"
            android:src="@drawable/ic_more_vert"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/lblTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_title"
        android:textSize="14sp"
        android:textColor="#666666"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/topBarAdd"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edtTitle"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_title"
        android:inputType="textCapSentences"
        android:textSize="16sp"
        android:textColor="#000000"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingHorizontal="14dp"
        android:backgroundTint="#D0D0D0"
        app:layout_constraintTop_toBottomOf="@id/lblTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- ================= ISI ================= -->
    <TextView
        android:id="@+id/lblContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_content"
        android:textSize="14sp"
        android:textColor="#666666"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edtTitle"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/edtContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:hint="@string/hint_content"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:includeFontPadding="false"
        android:textSize="14sp"
        android:textColor="#000000"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:paddingTop="16dp"
        android:paddingBottom="14dp"
        android:backgroundTint="#D0D0D0"
        app:layout_constraintTop_toBottomOf="@id/lblContent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
